Fix: fixed overlay scrollbars (from some browsers) causing horizontal scrollbars

--- a/src/styles/modules/layout.module.scss
+++ b/src/styles/modules/layout.module.scss
@@ -5,7 +5,7 @@ body {
 }
 
 .layoutWrapper {
-    width: 100vw;
+    width: 100%;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: auto;
